--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="Nashville weekend getaway, party bus tour, packing list, Nashville travel tips, Nashville Experience Tours">
     <title>Packing List for a Nashville Weekend Getaway with a Party Bus Tour</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://packing-list-for-a-nashville-weekend-getaway.vercel.app/">
+    <meta name="google-site-verification" content="_-5m1Bnev0ty95IVh3slmk__VwsVbXVaZ5W_-UvKdN8" />
 </head>
 <body>
     <header>
